--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,7 +8,7 @@
         .menu-header__box__icon
           = link_to "/groups/user", class:"menu-header__box__icon__white" do
             %i.fa.fa-edit
-          = link_to "/users/edit", class:"menu-header__box__icon__white" do
+          = link_to edit_user_path(current_user.id), class:"menu-header__box__icon__white" do
             %i.fa.fa-cog
     .groups-group-zone
       = link_to '/groups/messages', class:"groups-group-zone__font" do
