--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,5 @@
 @import "font-awesome";
 @import "modules/user";
 @import "modules/flash.scss";
+@import "modules/group.scss";
 @import "message";
-
