--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,12 +6,12 @@
         .menu-header__box__user-name
           LGTMもらう‼️
         .menu-header__box__icon
-          = link_to "/groups/user", class:"menu-header__box__icon__white" do
+          = link_to new_group_path, class:"menu-header__box__icon__white" do
             %i.fa.fa-edit
           = link_to edit_user_path(current_user.id), class:"menu-header__box__icon__white" do
             %i.fa.fa-cog
     .groups-group-zone
-      = link_to '/groups/messages', class:"groups-group-zone__font" do
+      = link_to "#", class:"groups-group-zone__font" do
         .groups-group-zone__font__group-name
           GroupTitle
         .groups-group-zone__font__message
