message_function_complete-Commit

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 @import "reset";
 @import "config/colors.scss";
+@import "config/font-size.scss";
 @import "font-awesome";
+@import "modules/side_bar.scss";
+@import "modules/chat.scss";
 @import "modules/user";
 @import "modules/flash.scss";
 @import "modules/group.scss";
