automatic_updating_function-Commit

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.message-detail
+.message-detail{data: {"message-id": message.id}}
   .message-detail__zone
     .message-detail__zone__toker
       = message.user.name
