--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -25,12 +25,16 @@
       
     .chat-group-form__field--right
       .chat-group-users.js-add-user
-        - @group.users.each do |chatMemberName|
-          .chat-group-user.clearfix.js-chat-member
-            %input.mainId{value:"#{current_user.id}", name:"group[user_ids][]", type:"hidden"}
-            .chat-group-user__name
-              = chatMemberName.name
-            - unless chatMemberName.name == current_user.name
+        .chat-group-user.clearfix.js-chat-member
+          %input.mainId{value:"#{current_user.id}", name:"group[user_ids][]", type:"hidden"}
+          .chat-group-user__name
+            = current_user.name
+        - @group.users.each do |chatMember|
+          - unless chatMember.id == current_user.id
+            .chat-group-user.clearfix.js-chat-member
+              %input.mainId{value:"#{chatMember.id}", name:"group[user_ids][]", type:"hidden"}
+              .chat-group-user__name
+                = chatMember.name
               .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
 
   .chat-group-form__field.clearfix
